# sawatuma

./: .gitignore  Dockerfile  README.md  pyproject.toml
sawatuma_rs/: Cargo.toml  pyproject.toml  sawatuma_rs.pyi
sawatuma_rs/src/: lib.rs
src/: __main__.py  change_parameters.py  change_user_count.py  tui.py
src/sawatuma/: datasets.py  device.py  model.py
